[fix] vh fixed on smaller phones

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 .wrapper {
-    height: 60vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
